# pytarpax

./: .coveragerc  requirements-dev.txt  setup.cfg  tox.ini
src/pytarpax/utility_lib/file_hash/: file_hash.py
tests/: test_file_hash.py
tests/file_hash/: test_file_hash.py
tests/test_data/: test_file_2.txt  test_file_3.txt  test_file_4.txt
