[metadata]
name = pytarpax
version = attr: pytarpax.VERSION
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = tar
license = BSD 3-Clause License
classifiers =
    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:


[options.package_data]
* = *.txt, *.rst
hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg